# rustero

./: .gitignore  Cargo.toml  clippy.toml  combine.txt  podcast.json  print  rustfmt.toml
db/: castero-podcasts.opml.xml  google-podcasts-subscriptions.opml.xml
podcast_data/: feeds.buzzsprout.com-9630768bf63d5ae6.json  feeds.zencastr.com-2af3985b4157c461.json  www.arraycast.com-b1720fc0d4277339.json
src/: TODO.txt  app.rs  errors.rs  event.rs  lib.rs  main.rs  podcast.rs  podcast_download.rs  podcast_factory.rs  terminal_ui.rs  ui.rs
src/commands/: cmt.md  command_interpreters.rs  interpreter_helpers.rs  mod.rs  podcast_algebra.rs  podcast_commands.rs  podcast_pipeline_interpreter.rs
src/opml/: mod.rs  opml_parser.rs
src/widgets/: mod.rs  scrollable_paragraph.rs
